<resources>
    <string name="app_name">Report It</string>
    <string name="version_1">Version 1</string>
    <string name="map_key" translatable="false">AIzaSyB_qsP8AOP_P0MdlPz-48TDaJYjTP3vbjo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description *</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>

</resources>
