<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/gray" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/overlay_dark_60" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/patient_profile_picture"
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:layout_marginRight="20dp"
                            android:src="@drawable/user1" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/fullname_txt"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="android android"
                                android:textColor="#fff"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <androidx.cardview.widget.CardView
                                    android:layout_width="120dp"
                                    android:layout_height="30dp"
                                    android:layout_marginRight="10dp"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    app:cardCornerRadius="10dp"
                                    app:cardElevation="0dp"
                                    android:layout_marginBottom="10dp">

                                    <com.balysv.materialripple.MaterialRippleLayout
                                        style="@style/RippleStyleWhite"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <Button
                                            android:id="@+id/edit_profile_btn"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/yellow"
                                            android:padding="5dp"
                                            android:text="edit profile"
                                            android:textColor="#fff"
                                            android:textSize="12sp" />

                                    </com.balysv.materialripple.MaterialRippleLayout>

                                </androidx.cardview.widget.CardView>

                                <androidx.cardview.widget.CardView
                                    android:layout_width="120dp"
                                    android:layout_height="30dp"
                                    android:layout_marginRight="10dp"
                                    android:foreground="?android:attr/selectableItemBackground"
                                    app:cardCornerRadius="10dp"
                                    app:cardElevation="0dp">

                                    <com.balysv.materialripple.MaterialRippleLayout
                                        style="@style/RippleStyleWhite"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent">

                                        <Button
                                            android:id="@+id/sign_out_btn"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/yellow"
                                            android:padding="5dp"
                                            android:text="sign out"
                                            android:textColor="#fff"
                                            android:textSize="12sp" />

                                    </com.balysv.materialripple.MaterialRippleLayout>

                                </androidx.cardview.widget.CardView>

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RelativeLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="10dp"
                    android:paddingRight="10dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/fullname_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/full_name"
                            android:inputType="textPersonName|textCapWords"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/mobile_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mobile_number"
                            android:inputType="phone"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/gender_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/gender"
                            android:inputType="phone"
                            android:textColor="#000"
                            android:textSize="16sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:textColor="#000"
                            android:inputType="textMultiLine"
                            android:scrollbars="vertical"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/longitude_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Longitude"
                            android:inputType="text"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/latitude_field"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Latitude"
                            android:inputType="text"
                            android:textColor="#000"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>

            </ScrollView>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/save_card"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_margin="30dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <com.balysv.materialripple.MaterialRippleLayout
                            style="@style/RippleStyleWhite"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <ImageView
                                android:id="@+id/map_image"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:scaleType="fitXY"
                                android:src="@drawable/googlemmap" />

                        </com.balysv.materialripple.MaterialRippleLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="30dp"
                        android:foreground="?android:attr/selectableItemBackground"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="10dp">

                        <com.balysv.materialripple.MaterialRippleLayout
                            style="@style/RippleStyleWhite"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1">

                            <Button
                                android:id="@+id/savechanges_btn"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="#0f70ff"
                                android:text="save changes"
                                android:textColor="#fff"
                                android:textStyle="bold" />

                        </com.balysv.materialripple.MaterialRippleLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </ScrollView>
        </LinearLayout>

    </ScrollView>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        app:loading_color="@color/yellow"
        app:loading_width="5dp" />

</RelativeLayout>